# Rememberance

./: .gitignore  ANALISI_LAVORO_RIMASTO.md  ARCHITECTURE_AGNOSTIC_EVOLUTION.md  BRAINSTORM_LLM_EVOLUTION.md  CODE_OF_CONDUCT.md  COMPOSER_TASKS.md  LICENSE  LLM_EVOLUTION_PLAN.md  RASPBERRY_PI_QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  STATO_REFACTORING_VISUAL.md
.copilot/: AGENTS.md
.github/: copilot-instructions.md
.github/agents/: dsp-engineer.agent.md  gui-designer.agent.md  planner.agent.md  plate-designer.agent.md  plate-expert.agent.md  reviewer.agent.md  tester.agent.md
.github/prompts/: add-frequency.prompt.md  design-plate.prompt.md  generate-tests.prompt.md  new-gui-tab.prompt.md  optimize-plate.prompt.md  refactor-audio.prompt.md
binaural_golden/: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GoldenStudio.spec  INSTALL_RASPBERRY_PI.md  README.md  README_PI_MODULAR.md  REFACTORING_GUIDE.md  REFACTORING_STATUS.md  build_app.sh  demo.py  history.txt  requirements.txt  requirements_pi.txt  setup_app.py  setup_verify.py
binaural_golden/core/: audio_backend.py
binaural_golden/framework/: README.md  (+1 more)
binaural_golden/src/rust_core/: Cargo.toml
binaural_golden/src/rust_core/src/: lib.rs  python_bindings.rs
docs/: index.html
hardware/: BOM.xlsx
llm-evolution/: ATOMIC_PROMPTS.md  COMPOSER_ATOMIC_TASKS.md  DELEGATED_TASKS.md  README.md  SETUP_GUIDE.md  STATE_OF_ART.md  STATUS.md  requirements.txt
old_synth/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
research.db/: 000009.sst  IDENTITY  MANIFEST-000005
(+214 files in other folders)
